# honest-texas-electricity

./: .gitignore  CLAUDE.md  Copy of Cheapest Electricity Plans on PowerToChoose July 20, 2026.xlsx  DESIGN.md  README.md  TODOS.md  pyproject.toml
.github/workflows/: deploy.yml  refresh-data.yml
data/: tx_zips.json
scripts/: build_fixtures.py  build_zip_map.py  run_pipeline.py  verify_efls.py
src/htx/: __init__.py  cost.py  efl.py  filter.py  ingest.py  models.py  pipeline.py  recommend.py  validate.py  zip_tdu.py
tests/: conftest.py  test_cost.py  test_efl.py  test_filter.py  test_filter_golden.py  test_ingest.py  test_pipeline.py  test_recommend.py  test_regions.py  test_validate.py
tests/fixtures/: all_plans.json  oncor_all.json  oncor_filtered.json
web/: astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
web/public/data/: aep-central.es.json  aep-central.json  aep-north.json  centerpoint.json  lubbock.es.json  lubbock.json  oncor.es.json  oncor.json  regions.json  tnmp.es.json  tnmp.json
web/src/data/: aep-central.json  aep-north.es.json  aep-north.json  centerpoint.es.json  centerpoint.json  efl-cache.json  history.json  lubbock.json  oncor.json  regions.json  tnmp.json  zip-tdu.json
web/src/layouts/: Layout.astro
web/src/lib/: recommend.ts  types.ts  zipRegion.ts
web/src/pages/: index.astro  overpaying.astro  trends.astro
web/src/pages/plan/: [id].astro
web/src/pages/plans/: [region].astro
web/src/pages/rejected/: [region].astro
web/src/styles/: global.css
